--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "mongoose": "^5.3.4",
     "spotify-web-api-node": "^4.0.0"
   }
 }
