--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
+    "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.4",
     "spotify-web-api-node": "^4.0.0"
