--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Find and share music with the world",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "app.js"
   },
   "repository": {
     "type": "git",
