--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon -x \"run-s start\""
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,9 @@
     "jsonwebtoken": "^8.3.0",
     "mongoose": "^5.3.4",
     "spotify-web-api-node": "^4.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.4",
+    "npm-run-all": "^4.1.3"
   }
 }
